# aiida-marketusercase3

./: LICENSE  README.md  conftest.py  downgrade.txt  pyproject.toml  wait_watch.sh
aiida_marketusercase3/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py  templates.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py  example_run.ipynb  run_model3.sh
examples/example_output/Monitor/: Monitor_progress-FSP-Lurederra_alumina.out
examples/example_output/Output/: FSP-Lurederra_alumina-particle_area_flux.srp  FSP-Lurederra_alumina-particle_volume_flux.srp
setup_files/local/: code_setup.yml
setup_files/local-daniel/: code_setup.yml
setup_files/unity2/: code_setup.yml  computer_configure.yml
tests/: test_calculations.py  test_cli.py
